fix explorer weirdness controls not visible

--- a/gnofract4d.css
+++ b/gnofract4d.css
@@ -31,3 +31,11 @@ notebook grid {
     padding: 4px;
     font-family: monospace;
 }
+
+#weirdbox {
+    margin-top: 4px;
+}
+
+#weirdbox scale {
+    padding: 2px;
+}
